[package]
name = "timemachine"
version = "0.1.0"
authors = ["Ezra Barrow <barrow@tilde.team>"]
edition = "2018"
license = "MIT"
description = "time-based state machine for daily scheduled state transitions"
repository = "https://github.com/barrowsys/timemachine"
categories = ["date-and-time", "data-structures"]

[dev-dependencies]
dialoguer = "0.7.1"
regex = "1"
lazy_static = "1.4.0"
console = "0.14.0"
